<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="10"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:columnCount="1"
        android:orientation="vertical"
        android:useDefaultMargins="true"
        tools:ignore="MissingConstraints,UselessParent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="top"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/TextViewStyle"
                android:id="@+id/soundSetting_textKey"
                android:text="@string/sound" />

            <ToggleButton
                style="@style/ToggleButtonStyle"
                android:id="@+id/sound_toggleButton"
                android:checked="true"
                android:text="@string/togglebuttonTextKey"
                android:onClick="btnClickHandler" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="top"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/TextViewStyle"
                android:id="@+id/hardModeSetting_textKey"
                android:text="@string/hardmode_TextKey" />

            <ToggleButton
                style="@style/ToggleButtonStyle"
                android:id="@+id/hardModeSetting_toggleButton"
                android:checked="false"
                android:text="@string/togglebuttonTextKey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:gravity="top"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/delay_textKey"
                style="@style/TextViewStyle"
                android:text="@string/delayTextKey" />

            <SeekBar
                style="@style/SeekBarStyle"
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="1000"
                android:min="100"
                android:progress="500"
                android:stepSize="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:gravity="top"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/TextViewStyle"
                android:id="@+id/themesSpinner_textKey"
                android:text="@string/sound_theme_textValue" />

            <Spinner
                android:id="@+id/themesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/soundThemeSpinnerDescription" />
        </LinearLayout>

    </GridLayout>

</FrameLayout>